# uc-intg-vlcmedia

./: Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entry.sh  driver.json  pyproject.toml
.github/workflows/: build.yml
uc_intg_vlcmedia/: __init__.py  client.py  config.py  driver.py  media_player.py
